[package]
name = "duplit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
fs_extra = "1.3.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
shellexpand = "3.1.0"
toml = "0.8.8"
xdg = "2.5.2"
